Revert "pembarauan kode"
This reverts commit cff8118525392f31645dbeb48e1f90c749be3035.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prisma:seed": "node prisma/seed.js"
   },
   "dependencies": {
-    "@prisma/client": "^6.10.1",
+    "@prisma/client": "6.10.1",
     "@supabase/supabase-js": "^2.50.2",
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
